--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,7 @@
 steps:
+- name: "gcr.io/google-appengine/python"
+  entrypoint: bash
+  args: ["pip", "install", "-r", "requirements.txt", "-t", "lib"]
 - name: "gcr.io/cloud-builders/gcloud"
   args: ["app", "deploy"]
 timeout: "1600s"
