--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
-Flask==0.12.2
+Flask==0.12.3
+Flask-Bcrypt==0.7.1
+Flask-Migrate==2.0.0
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.1
+Flask-Testing==0.5.0
+GitHub-Flask==3.1.3
+gunicorn==19.6.0
+itsdangerous==0.24
 Werkzeug<0.13.0,>=0.12.0
