--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+alembic==1.0.1
+bcrypt==3.1.4
+certifi==2018.10.15
+cffi==1.11.5
+chardet==3.0.4
+Click==7.0
 Flask==0.12.3
 Flask-Bcrypt==0.7.1
 Flask-Migrate==2.0.0
@@ -6,5 +12,17 @@ Flask-SQLAlchemy==2.1
 Flask-Testing==0.5.0
 GitHub-Flask==3.1.3
 gunicorn==19.6.0
+idna==2.7
 itsdangerous==0.24
-Werkzeug<0.13.0,>=0.12.0
+Jinja2==2.10
+Mako==1.0.7
+MarkupSafe==1.0
+pycparser==2.19
+python-dateutil==2.7.4
+python-editor==1.0.3
+requests==2.20.0
+six==1.11.0
+SQLAlchemy==1.2.12
+stripe==2.10.1
+urllib3==1.24
+Werkzeug==0.12.2
